update fontawesome and update twitter logo

--- a/templates/foot.twig
+++ b/templates/foot.twig
@@ -10,7 +10,7 @@
 						{{ macros.square_stack('fa-facebook', 'fa-4x', true, '') }}
 					</a>
 					<a class="social" href="https://twitter.com/lmmsio">
-						{{ macros.square_stack('fa-twitter-square', 'fa-4x', true, '') }}
+						{{ macros.square_stack('fa-x-twitter', 'fa-4x', true, '') }}
 					</a>
 					<a class="social" href="/chat">
 						{{ macros.square_stack('fa-discord', 'fa-4x', true, '') }}
